/*
 * Copyright (C) 2020 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package com.google.companionprotos;

option java_package = "com.google.android.companionprotos";
option java_outer_classname = "CapabilitiesExchangeProto";

message CapabilitiesExchange {
  // Supported OOB channel types
  enum OobChannelType {
    // The OOB channel is unknown.
    //
    // Note, this enum name is prefixed. See
    // go/proto-best-practices-checkers#enum-default-value-name-conflict
    OOB_CHANNEL_UNKNOWN = 0;

    // Bluetooth RFCOMM OOB channel
    BT_RFCOMM = 1;
  }

  // All supported OOB channels
  repeated OobChannelType supported_oob_channels = 1;

  // Avaialble OSs for a mobile device
  enum MobileOs {
    UNKNOWN = 0;
    ANDROID = 1;
    IOS = 2;
  }

  // OS of the mobile device. This field will not be set by the IHU.
  MobileOs mobile_os = 2;

  // The display name of the device. Must be blank for message versions <= 3
  // to avoid expanded message size until packets for capabilities is supported.
  string device_name = 3;
}
